add DB, dotenv, and sample env

--- a/compose.yml
+++ b/compose.yml
@@ -8,3 +8,17 @@ services:
       - .:/app
     env_file:
       - .env
+    command: npm run dev
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_DB: inventory
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+volumes:
+  db_data:
