--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 PORT=3000
 DB_HOST=db
 DB_PORT=5432
-DB_USER=user
-DB_PASSWORD=password
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
 DB_NAME=inventory
